--- a/index.html
+++ b/index.html
@@ -223,6 +223,7 @@
     </div>
     <footer>
         <p>Copyright &copy; <a href="#">Ui Dev 2024 </a></p>
+        <div>Adding after push the code</div>
     </footer>
   </body>
 </html>
