--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
           <div></div>
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a href="" class="nav-link">Projects</a>
+              <a href="#projects" class="nav-link">Projects</a>
             </li>
             <li class="nav-item">
-              <a href="" class="nav-link">About</a>
+              <a href="#about" class="nav-link">About</a>
             </li>
             <li class="nav-item">
-              <a href="" class="nav-link">Contact</a>
+              <a href="#contact" class="nav-link">Contact</a>
             </li>
           </ul>
         </div>
@@ -46,7 +46,7 @@
         Architects
       </div>
     </header>
-    <div class="projects">
+    <div class="projects" id="projects">
       <p>Projects</p>
       <div class="row">
         <div class="col">
@@ -119,7 +119,7 @@
       </div>
     </div>
 
-    <div class="about">
+    <div class="about" id="about">
       <div>
         <h1>About</h1>
         <hr />
@@ -196,7 +196,7 @@
         </div>
       </div>
     </div>
-    <div class="contact">
+    <div class="contact" id="contact">
       <h1>Contact</h1>
       <form action="" method="post" class="form">
         <input type="text" class="form-control p-3 mt-2" placeholder="Name" />
